@@ -1,5 +1,3 @@
-import scala.tools.nsc.io.Jar
-
 buildscript {
     repositories {
         jcenter()
@@ -24,7 +22,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'net.cazzar.gradle.modsio'
 
-version = "1.0.0"
+version = "1.0.1"
 group = "the_fireplace.grandeconomy"
 archivesBaseName = "GrandEconomy-1.12.2"
 
